# rosc

./: Cargo.toml  README.md
examples/: receiver.rs  sender.rs
src/: decoder.rs  encoder.rs  types.rs
tests/: decoder_test.rs  encoder_test.rs
