[package]
name = "rosc_supercollider"
version = "0.2.0"
authors = ["Jonathan Giroux <giroux.jo@gmail.com>"]
description = "An OSC library for Rust patched for SuperCollider"
keywords = ["audio", "osc", "supercollider"]
documentation = "https://docs.klingt.net/rustdoc/rosc"
repository = "https://git.klingt.net/alinz/rosc"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
lints = ["clippy"]

[dependencies]
byteorder = "1"
clippy = {version="^0", optional=true}
